tests/parsing/smtlib/poly/errors/074_define-fun_bad_name_1.expected
File "tests/parsing/smtlib/poly/errors/074_define-fun_bad_name_1.psmt2", line 2, character 12-13:
2 | (define-fun _)
                ^
Error while parsing a function definition, read the reserved word '_',
      but expected a symbol for the function's name.
